[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minrl"
version = "0.1.0"
description = "Clean, minimal implementations of fundamental reinforcement learning algorithms in GridWorld"
readme = "README.md"
authors = [
    {name = "Leon", email = "yibin.leon.liu@outlook.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "torch>=1.8.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0"
]

[project.urls]
Homepage = "https://github.com/10-OASIS-01/minrl"
Repository = "https://github.com/10-OASIS-01/minrl.git"